@@ -1,3 +1,14 @@
+2011-04-08  Jian Li  <jianli@chromium.org>
+
+        Unreviewed, rolling out r83348.
+        http://trac.webkit.org/changeset/83348
+        https://bugs.webkit.org/show_bug.cgi?id=49508
+
+        Breaks layout tests in QT, Win7 and Chromium.
+
+        * fast/forms/cursor-at-editable-content-boundary-expected.txt: Removed.
+        * fast/forms/cursor-at-editable-content-boundary.html: Removed.
+
 2011-04-08  MORITA Hajime  <morrita@google.com>
 
         Reviewed by Simon Fraser.
